# serializer version: 1
# name: test_all_entities[sensor.sec84251907c415-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.sec84251907c415',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:printer',
    'original_name': None,
    'platform': 'syncthru',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '08HRB8GJ3F019DD_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.sec84251907c415-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'display_text': '',
      'friendly_name': 'SEC84251907C415',
      'icon': 'mdi:printer',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.sec84251907c415',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'warning',
  })
# ---
# name: test_all_entities[sensor.sec84251907c415_active_alerts-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.sec84251907c415_active_alerts',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:printer',
    'original_name': 'Active alerts',
    'platform': 'syncthru',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'active_alerts',
    'unique_id': '08HRB8GJ3F019DD_active_alerts',
    'unit_of_measurement': 'alerts',
  })
# ---
# name: test_all_entities[sensor.sec84251907c415_active_alerts-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'SEC84251907C415 Active alerts',
      'icon': 'mdi:printer',
      'unit_of_measurement': 'alerts',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.sec84251907c415_active_alerts',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_all_entities[sensor.sec84251907c415_black_toner_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.sec84251907c415_black_toner_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:printer',
    'original_name': 'Black toner level',
    'platform': 'syncthru',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'toner_black',
    'unique_id': '08HRB8GJ3F019DD_toner_black',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor.sec84251907c415_black_toner_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'cnt': 1176,
      'friendly_name': 'SEC84251907C415 Black toner level',
      'icon': 'mdi:printer',
      'newError': 'C1-5110',
      'opt': 1,
      'remaining': 8,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.sec84251907c415_black_toner_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '8',
  })
# ---
# name: test_all_entities[sensor.sec84251907c415_cyan_toner_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.sec84251907c415_cyan_toner_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:printer',
    'original_name': 'Cyan toner level',
    'platform': 'syncthru',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'toner_cyan',
    'unique_id': '08HRB8GJ3F019DD_toner_cyan',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor.sec84251907c415_cyan_toner_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'cnt': 25,
      'friendly_name': 'SEC84251907C415 Cyan toner level',
      'icon': 'mdi:printer',
      'newError': '',
      'opt': 1,
      'remaining': 98,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.sec84251907c415_cyan_toner_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '98',
  })
# ---
# name: test_all_entities[sensor.sec84251907c415_input_tray_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.sec84251907c415_input_tray_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:printer',
    'original_name': 'Input tray 1',
    'platform': 'syncthru',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'tray',
    'unique_id': '08HRB8GJ3F019DD_tray_tray_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.sec84251907c415_input_tray_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'capa': 150,
      'friendly_name': 'SEC84251907C415 Input tray 1',
      'icon': 'mdi:printer',
      'newError': '',
      'opt': 1,
      'paper_level': 0,
      'paper_size1': 4,
      'paper_size2': 0,
      'paper_type1': 2,
      'paper_type2': 0,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.sec84251907c415_input_tray_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Ready',
  })
# ---
# name: test_all_entities[sensor.sec84251907c415_magenta_toner_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.sec84251907c415_magenta_toner_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:printer',
    'original_name': 'Magenta toner level',
    'platform': 'syncthru',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'toner_magenta',
    'unique_id': '08HRB8GJ3F019DD_toner_magenta',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor.sec84251907c415_magenta_toner_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'cnt': 25,
      'friendly_name': 'SEC84251907C415 Magenta toner level',
      'icon': 'mdi:printer',
      'newError': '',
      'opt': 1,
      'remaining': 98,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.sec84251907c415_magenta_toner_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '98',
  })
# ---
# name: test_all_entities[sensor.sec84251907c415_output_tray_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.sec84251907c415_output_tray_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:printer',
    'original_name': 'Output tray 1',
    'platform': 'syncthru',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'output_tray',
    'unique_id': '08HRB8GJ3F019DD_output_tray_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.sec84251907c415_output_tray_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'capacity': 50,
      'friendly_name': 'SEC84251907C415 Output tray 1',
      'icon': 'mdi:printer',
      'name': 1,
      'status': '',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.sec84251907c415_output_tray_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Ready',
  })
# ---
# name: test_all_entities[sensor.sec84251907c415_yellow_toner_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.sec84251907c415_yellow_toner_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:printer',
    'original_name': 'Yellow toner level',
    'platform': 'syncthru',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'toner_yellow',
    'unique_id': '08HRB8GJ3F019DD_toner_yellow',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor.sec84251907c415_yellow_toner_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'cnt': 27,
      'friendly_name': 'SEC84251907C415 Yellow toner level',
      'icon': 'mdi:printer',
      'newError': '',
      'opt': 1,
      'remaining': 97,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.sec84251907c415_yellow_toner_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '97',
  })
# ---
